frontend-service-fix.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: employee-crud-test
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
